# rs3cache_extractor

./: .gitignore  SQLDB.txt  coordinates.py  decoder.py  extract-all.sh  extract_start_coordinate_not_found.py  help.md  import_xlsx_to_db.py  input.txt  load_tiles.py  output.csv  output.txt  override.txt  package-lock.json  package.json  readme.md  start_not_found.json  test_object_40320.js  test_unknown_opcode.js  test_varuint_fix.js  tile_cleaner.py  walk_mask_decode.py  webpack.config.js  worldReachableTiles.db-journal  worldReachableTiles.db-shm
cache/items/: .schema-items.json
cache/params/: .schema-params.json  params.all.json
docs/: cluster_schema_questions.md  database_schema.md  hpa_jps_database_ready.md  plane_connection_analysis.md  populate_clusters_readme.md  rs_3_pathfinder_design_doc.md  tiles_schema.md  worldReachableTiles.md  worldReachableTiles_schema.md  worldReachableTiles_schema_suggestions.md
rust/: Cargo.toml
rust/src/: db.rs  lib.rs  main.rs  util.rs
rust/src/commands/: import_xlsx.rs  load_tiles.rs  mod.rs  tile_cleaner.rs
rust/src/commands/cluster/: cluster_builder.rs  config.rs  db.rs  entrance_discovery.rs  executor.rs  inter_connector.rs  intra_connector.rs  intra_trimmer.rs  jps_accelerator.rs  logging.rs  mod.rs  models.rs  neighbor_policy.rs  teleport_connector.rs
rust/tests/: cluster_exec.rs
scripts/: populate_clusters.py
scripts/cluster/: db_context.py  entrance_discovery.py  executor.py  inter_connector.py  intra_connector.py  jps_accelerator.py  logging_utils.py  (+1 more)
src/: clicommands.ts  opcode_reader.ts  opdecoder.ts
(+8 files in other folders)
